test/code/test_class_clone_error.php
<?php

$a = 100;
$b = clone $a;

